[package]
name = "blah"
version = "0.1.0"
edition = "2024"
authors = ["abab-bk"]
description = "Unified Toolchain for Brainfuck."
license = "MIT"
repository = "https://github.com/abab-bk/blah"
documentation = "https://github.com/Abab-bk/blah/blob/main/README.MD"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
inkwell = { version = "0.9.0", features = ["llvm22-1", "target-all"] }
regex = "1"
semver = "1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"
